--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Skill For Life"
-title: "Skill For Life"
+name: "Kĩ Năng Sống"
+title: "Kĩ Năng Sống"
 email: khuynhtroc@gmail.com
 description: "Nghệ Thuật Giao Tiếp - Kỹ Năng Mềm - Câu Chuyện Cuộc Sống"
 url: "https://nguyentronghuynh.com" 
