--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "Nguyễn Trọng Huỳnh"
-description: "My Blog"
+title: "Jekyll-Theme-MDUI"
+description: "A Jekyll theme based on MDUI"
 url: 
 baseurl: ""
-author: "Huỳnh Trọc"
+author: "KeJun"
 paginate: 5
 paginate_path: "/blog/page:num/"
 
