--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,3 +5,7 @@ kejun:
 test:
   avatar: "https://dummyimage.com/40x40/ffffff/000000.png&text=Test"
   name: "Test"
+
+Huynhtroc:
+  avatar: "{{ site.url }}/assets/images/author/trong-huynh.png"
+  name: "Trọng Huỳnh"
