--- a/_data/site.yml
+++ b/_data/site.yml
@@ -24,11 +24,11 @@ many_authors: false
 
 sns_share: # SNS Share Switch
    twitter: true
-   facebook: false
-   googleplus: false
-   weibo: true
-   linkedin: false
-   qq: true
+   facebook: true
+   googleplus: true
+   weibo: false
+   linkedin: true
+   qq: false
    telegram: true
   
 comment:
