--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ gems:
 # For external links add external: true
 links:
   - title: Home
-    url: /
+    url: 
   - title: About
     url: /about/
   - title: Contact
