--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site Settings
-title: Nguyễn Trọng Huỳnh
-email: khuynhtroc@gmail.com
+title: Jekflix | A theme for Jekyll
+email: youremail@xyz.com
 description: Some text about your blog.
-baseurl: "https://nguyentronghuynh.com" # the subpath of your site, e.g. /blog
-url: "https://nguyentronghuynh.com" # the base hostname & protocol for your site
+baseurl: "/jekflix-template" # the subpath of your site, e.g. /blog
+url: "https://www.rossener.com" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
-username: Nguyễn Trọng Huỳnh
+username: Jekflix
 user_description: Some text about you.
 disqus_username: disqus_username
 
@@ -33,7 +33,7 @@ gems:
 # For external links add external: true
 links:
   - title: Home
-    url: 
+    url: /
   - title: About
     url: /about/
   - title: Contact
