--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 title: Jekflix | A theme for Jekyll
 email: youremail@xyz.com
 description: Some text about your blog.
-baseurl: "/jekflix-template" # the subpath of your site, e.g. /blog
-url: "https://www.rossener.com" # the base hostname & protocol for your site
+baseurl: "https://nguyentronghuynh.com" # the subpath of your site, e.g. /blog
+url: "https://nguyentronghuynh.com" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
-username: Jekflix
+username: Huynhtroc
 user_description: Some text about you.
 disqus_username: disqus_username
 
