--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 name: "B6 Giảng Võ"
 title: "B6 Giảng Võ"
 slogan: "B6 Giảng Võ"
-email: contact@b6giangvo.info
+email: info@nguyentronghuynh.com
 description: ""
-url: "https://b6giangvo.info"
-base url: "https://b6giangvo.info"
-allow_search_engine: true
+url: "https://nguyentronghuynh.com"
+base url: "https://nguyentronghuynh.com"
+allow_search_engine: false
 google_verify: ""
 bing_verify: ""
 google_analytics: "UA-XXXXXXXX-X"
