--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-name: "B6 Giảng Võ"
-title: "B6 Giảng Võ"
-slogan: "B6 Giảng Võ"
-email: contact@b6giangvo.info
+name: "Nguyễn Trọng Huỳnh"
+title: "Nguyễn Trọng Huỳnh"
+slogan: "Nguyễn Trọng Huỳnh"
+email: info@nguyentronghuynh.com
 description: ""
-url: "https://b6giangvo.info"
-base url: "https://b6giangvo.info"
+url: "https://nguyentronghuynh.com"
+base url: "https://nguyentronghuynh.com"
 allow_search_engine: true
 google_verify: ""
 bing_verify: ""
