--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: info@nguyentronghuynh.com
 description: ""
 url: "https://nguyentronghuynh.com"
 base url: "https://nguyentronghuynh.com"
-allow_search_engine: true
+allow_search_engine: false
 google_verify: ""
 bing_verify: ""
 google_analytics: "UA-XXXXXXXX-X"
