--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ description: ""
 url: "https://nguyentronghuynh.com"
 base url: "https://nguyentronghuynh.com"
 allow_search_engine: false
-google_verify: ""
+google_verify: "v6zpRiKh3pXEGi47WklDPdIR6V28K-6whJLinfI_HLM"
 bing_verify: ""
-google_analytics: "UA-XXXXXXXX-X"
+google_analytics: "UA-137398840-1"
 google_plus: ""
 disqus_shortname: ""
 
