--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Nguyễn Trọng Huỳnh"
-title: "Nguyễn Trọng Huỳnh"
+name: "HOTLINE: 0985.629.621"
+title: "HOTLINE: 0985.629.621"
 slogan: "Nguyễn Trọng Huỳnh"
 email: info@nguyentronghuynh.com
 description: ""
